--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URL", "\"https://www.thesportsdb.com/\""
         buildConfigField "String", "TSDB_API_KEY", "\"1/\""
     }
@@ -25,29 +25,60 @@ android {
     androidExtensions {
         experimental = true
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+}
+
+ext {
+    //AndroidX
+    appcompact = '1.1.0'
+    constrainlayout = '1.1.3'
+    recyclerview = '1.1.0'
+    viewpager2 = '1.0.0'
+    //google
+    material = '1.2.0-alpha02'
+    //network
+    retrofit = '2.3.0'
+    okhttp = '3.12.4'
+    loggingInterceptor = '3.10.0'
+    //rxJava
+    rxAndroid = '2.1.0'
+    rxJava = '2.1.7'
+    //unit test
+    junit = '4.12'
+    testjunit = '1.1.1'
+    testespresso = '3.2.0'
+    //image
+    glide = '4.9.0'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:exifinterface:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation "org.jetbrains.anko:anko-commons:$anko_version"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
+    //android x
+    implementation "androidx.appcompat:appcompat:$appcompact"
+    implementation "androidx.constraintlayout:constraintlayout:$constrainlayout"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview"
+    implementation "androidx.viewpager2:viewpager2:$viewpager2"
+    //google
+    implementation "com.google.android.material:material:$material"
+    //network/retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit"
+    //network/okhttp
+    implementation "com.squareup.okhttp3:okhttp:$okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptor"
+    //rxJava
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJava"
+    //imageview
+    implementation "com.github.bumptech.glide:glide:$glide"
+    //unit test
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    testImplementation "junit:junit:$junit"
+    androidTestImplementation "androidx.test.ext:junit:$testjunit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$testespresso"
 }
